--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/archiver": "^3.1.0",
     "webext-buildtools-builder-types": "^1.0.10",
     "@types/node": "^12.7.12",
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "^0.33.1",
     "typescript": "^3.9.10"
   }
 }
