--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "pack": "ncc build",
-    "all": "npm run build && npm run pack"
+    "all": "npm run build && npm run pack",
+    "mergePushMasterToV1": "git fetch . master:v1 && git push origin v1"
   },
   "keywords": [
     "webext-buildtools",
@@ -21,15 +22,15 @@
   "author": "cardinalby",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0",
+    "@actions/core": "^1.9.1",
     "github-actions-utils": "^1.0.8",
-    "webext-buildtools-dir-reader-mw": "^1.0.17"
+    "webext-buildtools-dir-reader-mw": "^1.0.18"
   },
   "devDependencies": {
     "@types/archiver": "^3.1.0",
-    "webext-buildtools-builder-types": "^1.0.10",
-    "@types/node": "^12.7.12",
-    "@vercel/ncc": "^0.33.1",
-    "typescript": "^3.9.10"
+    "webext-buildtools-builder-types": "^1.0.11",
+    "@types/node": "^16.11.51",
+    "@vercel/ncc": "^0.34.0",
+    "typescript": "^4.7.4"
   }
 }
