--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,26 +12,23 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [20.x]
     steps:
-      - uses: actions/checkout@v2
-      - name: Extract branch name
-        id: extractBranch
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Build
         run: npm run build
       - name: Pack
         run: npm run pack
       - name: Check packed js changes
         id: packedJsStatus
-        run: echo ::set-output name=changes::$(git status ${{ env.PACKED_JS_PATH }} --porcelain)
+        run: echo "changes=$(git status ${{ env.PACKED_JS_PATH }} --porcelain)" >> $GITHUB_OUTPUT
       - name: Commit packed js
         id: commitPackedJs
         if: steps.packedJsStatus.outputs.changes
@@ -47,4 +44,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tags: true
           force: true
-          branch: ${{ steps.extractBranch.outputs.branch }}
+          branch: ${{ github.head_ref || github.ref_name }}
